--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,24 +9,24 @@ greendao {
 
 android {
     //配置签名信息
-    signingConfigs {
-        config {
-            //加载资源
-            Properties properties = new Properties()
-            InputStream inputStream = project.rootProject.file('local.properties').newDataInputStream() ;
-            properties.load( inputStream )
-            //此处报错，可使用自己的key
-            def sdkDir = properties.getProperty('RELEASE_KEYSTORE_FILE')
-            def key_storePassword = properties.getProperty( 'RELEASE_KEYSTORE_PASSWORD' )
-            def key_keyAlias = properties.getProperty( 'RELEASE_KEY_ALIAS' )
-            def key_keyPassword = properties.getProperty( 'RELEASE_KEY_PASSWORD' )
-
-            storeFile file(sdkDir)
-            storePassword key_storePassword
-            keyAlias key_keyAlias
-            keyPassword key_keyPassword
-        }
-    }
+//    signingConfigs {
+//        config {
+//            //加载资源
+//            Properties properties = new Properties()
+//            InputStream inputStream = project.rootProject.file('local.properties').newDataInputStream() ;
+//            properties.load( inputStream )
+//            //此处报错，可使用自己的key
+//            def sdkDir = properties.getProperty('RELEASE_KEYSTORE_FILE')
+//            def key_storePassword = properties.getProperty( 'RELEASE_KEYSTORE_PASSWORD' )
+//            def key_keyAlias = properties.getProperty( 'RELEASE_KEY_ALIAS' )
+//            def key_keyPassword = properties.getProperty( 'RELEASE_KEY_PASSWORD' )
+//
+//            storeFile file(sdkDir)
+//            storePassword key_storePassword
+//            keyAlias key_keyAlias
+//            keyPassword key_keyPassword
+//        }
+//    }
     compileSdkVersion 26
     buildToolsVersion '27.0.3'
     defaultConfig {
@@ -45,12 +45,12 @@ android {
     buildTypes {
         release {
             minifyEnabled false                     //混淆开启
-            signingConfig signingConfigs.config    //设置签名信息
+//            signingConfig signingConfigs.config    //设置签名信息
             proguardFiles  'proguard-rules.pro','proguard.cfg'
         }
         debug {
             minifyEnabled false                     //混淆关闭
-            signingConfig signingConfigs.config    //设置签名信息
+//            signingConfig signingConfigs.config    //设置签名信息
             proguardFiles 'proguard-rules.pro','proguard.cfg'
         }
     }
